030-software/fluxcd/apps/passed/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: passed
  annotations:
    dashboard.${domain}/name: passed
    dashboard.${domain}/url: https://passed.${domain}
    dashboard.${domain}/icon: share-all
spec:
  hostnames:
  - passed.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: passed
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
